CPG-DEV/src/objects/Bill_To_Ship_To__c.object
<CustomObject>
    <fields>
        <fullName>Bill_To_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bill To&apos;s</relationshipLabel>
        <relationshipName>Bill_To_Ship_Tos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To</label>
        <referenceTo>Bill_To_Ship_To__c</referenceTo>
        <relationshipLabel>Bill To&apos;s</relationshipLabel>
        <relationshipName>Ship_Tos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ERP_Id__c</fullName>
        <label>ERP Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ship To&apos;s</relationshipLabel>
        <relationshipName>Bill_To_Ship_Tos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>Bill_To_Ship_To__c</referenceTo>
        <relationshipLabel>Ship To&apos;s</relationshipLabel>
        <relationshipName>Bill_To_Ship_Tos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Universal_Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Universal Bill To</label>
        <referenceTo>Bill_To_Ship_To__c</referenceTo>
        <relationshipLabel>Universal Bill To&apos;s</relationshipLabel>
        <relationshipName>Universal_Bill_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Universal_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Universal Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bill To Ship Tos</relationshipLabel>
        <relationshipName>Bill_To_Ship_Tos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Universal_Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Universal Ship To</label>
        <referenceTo>Bill_To_Ship_To__c</referenceTo>
        <relationshipLabel>Universal Ship To&apos;s</relationshipLabel>
        <relationshipName>Bill_To_Ship_Tos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Universal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Universal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bill To Ship To</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill To Ship Tos</pluralLabel>
    <recordTypes>
        <fullName>Bill_To</fullName>
        <active>true</active>
        <label>Bill To</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ship_To</fullName>
        <active>true</active>
        <label>Ship To</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>